# PapyrusExtenderSSE

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  PapyrusExtender.sln  PapyrusExtender.vcxproj  PapyrusExtender.vcxproj.filters  ProjectGen.py  README.md  exports.def  vcpkg.json  version.rc
.github/workflows/: main.yml  maintenance.yml
Papyrus/: Debris.psc  LightingTemplate.psc  PO3_Events_AME.psc  PO3_Events_Alias.psc  PO3_Events_Form.psc  PO3_SKSEFunctions.psc
Papyrus/Scripts/: Debris.pex  FootstepSet.pex  LightingTemplate.pex  MaterialObject.pex  PO3_Events_AME.pex  PO3_Events_Alias.pex  PO3_Events_Form.pex  PO3_SKSEFunctions.pex
Papyrus/Source/scripts/: PO3_Events_AME.psc  PO3_Events_Alias.psc  PO3_Events_Form.psc  PO3_SKSEFunctions.psc
cmake/: headerlist.cmake  sourcelist.cmake
cmake/ports/clib-util/: portfile.cmake  vcpkg.json
cmake/ports/srell/: portfile.cmake  vcpkg.json
include/: Common.h  ConditionParser.cpp  ConditionParser.h  PCH.h  Version.h  main.h  po3_events.h  po3_functions.h  po3_graphicfunctions.h  po3_offsets.h  po3_resetfunctions.h  po3_serializedclasses.h
include/API/: API.h  DescriptionFrameworkAPI.h  DismemberingFrameworkAPI.h  NextGenDecapitationsAPI.h
include/Game/: Cache.h  EventHandler.h  HookedEventHandler.h  Manager.h
include/Hooks/: EventHook.h
include/Papyrus/: ActiveMagicEffect.h  Actor.h  ActorBase.h  Alias.h  ArmorAddon.h  Array.h  Book.h  Cell.h  Debug.h  EffectShader.h  Enchantment.h  Events.h  ExtendedObjectTypes.h  Form.h  Furniture.h  Game.h  Hazard.h  Light.h  Location.h  ObjectReference.h  ObjectTypes.h  Package.h  PapyrusActor.h  PapyrusActorBase.h  PapyrusArmorAddon.h  PapyrusArray.h  PapyrusCell.h  PapyrusDebug.h  PapyrusEffectShader.h  PapyrusForm.h  PapyrusGame.h  PapyrusHazard.h  PapyrusLight.h  PapyrusLocation.h  PapyrusMagicEffect.h  PapyrusObjectReference.h  PapyrusPackage.h  PapyrusProjectile.h  PapyrusSound.h  PapyrusSpell.h  (+12 more)
include/Papyrus/Functions/: Actor.h  ActorBase.h  Ammo.h  ArmorAddon.h  Array.h  Book.h  Cell.h  Debug.h  Detection.h  EffectShader.h  Enchantment.h  Faction.h  Furniture.h  Game.h  Graphics.h  Hazard.h  Idle.h  LeveledItem.h  LeveledList.h  Light.h  Location.h  MagicEffect.h  ObjectReference.h  Package.h  Potion.h  Projectile.h  Quest.h  Scene.h  Scroll.h  Sound.h  Spell.h  Strings.h  UI.h  Utility.h  VisualEffect.h  Weather.h
include/Papyrus/Functions/ActiveMagicEffect/: Events.h  Functions.h
include/Papyrus/Functions/Alias/: Events.h  Functions.h
include/Papyrus/Functions/Form/: Events.h  Functions.h
include/Papyrus/Util/: ActorGraphics.h  ConditionParser.h  Graphics.h  Inventory.h  Magic.h  Script.h
include/Serialization/: Base.h  EventHolder.h  Events.h  KeywordRef.h  Keywords.h  Manager.h  Perks.h  Reset.h  Serialize.h  Services.h
include/Serialization/Form/: Base.h  Keywords.h  Perks.h
include/Serialization/Registration/: DataMap.h  DataSet.h
include/Util/: ConditionParser.h  GraphicsReset.h  VMErrors.h
papyrus src/: FootstepSet.psc  PO3_Events_AME.psc  PO3_Events_Alias.psc  PO3_Events_Form.psc  PO3_SKSEFunctions.psc
src/: ConditionParser.cpp  main.cpp  po3_events.cpp  po3_functions.cpp  po3_functions_old.h  po3_graphicfunctions.cpp  po3_normalapplicator.cpp  po3_offsets.cpp  po3_resetfunctions.cpp  po3_serializedclasses.cpp
src/API/: DescriptionFrameworkAPI.cpp
src/C++/: Common.h  PCH.cpp  PCH.h  main.cpp
src/C++/Game/: Cache.cpp  Cache.h  Detection.cpp  EventHandler.cpp  EventHandler.h  Events.cpp  Events.h  HookedEventHandler.h  Manager.cpp  Manager.h  Services.cpp
src/C++/Hooks/: EventHook.cpp  EventHook.h
src/C++/Papyrus/: ActiveMagicEffect.h  Actor.h  ActorBase.h  Alias.h  ArmorAddon.h  Array.h  Book.h  Cell.h  Common.h  Debug.h  EffectShader.h  Enchantment.h  Events.cpp  Events.h  ExtendedObjectTypes.h  FEC.h  Form.h  Furniture.h  Game.h  Hazard.h  Light.h  Location.h  MagicEffect.h  Manager.cpp  ObjectReference.h  Package.h  Papyrus.cpp  Papyrus.h  Potion.h  Projectile.h  Registration.cpp  Registration.h  Scroll.h  Sound.h  Spell.h  Strings.h  Utility.h  VisualEffect.h  Weather.h
src/C++/Serialization/: EventHolder.cpp  EventHolder.h  Events.cpp  Events.h  Manager.cpp  Manager.h  Services.cpp  Services.h
src/C++/Util/: ConditionParser.cpp  ConditionParser.h  Graphics.cpp  Graphics.h  Magic.cpp  Magic.h
src/Game/: Cache.cpp  EventHandler.cpp  HookedEventHandler.cpp  Manager.cpp  Services.cpp
src/Hooks/: EventHook.cpp
src/Papyrus/: ActiveMagicEffect.cpp  Actor.cpp  ActorBase.cpp  Alias.cpp  ArmorAddon.cpp  Array.cpp  Book.cpp  Cell.cpp  Debug.cpp  EffectShader.cpp  Enchantment.cpp  Events.cpp  ExtendedObjectTypes.cpp  Form.cpp  Furniture.cpp  Game.cpp  Hazard.cpp  Light.cpp  Location.cpp  MagicEffect.cpp  Manager.cpp  MaterialObject.psc  ObjectReference.cpp  ObjectTypes.cpp  PO3_Events_AME.psc  PO3_Events_Alias.psc  PO3_Events_Form.psc  PO3_SKSEFunctions.psc  Package.cpp  PapyrusActor.cpp  PapyrusActorBase.cpp  PapyrusArmorAddon.cpp  PapyrusArray.cpp  PapyrusCell.cpp  PapyrusDebug.cpp  PapyrusEffectShader.cpp  PapyrusForm.cpp  PapyrusFurniture.cpp  PapyrusGame.cpp  PapyrusHazard.cpp  (+20 more)
src/Papyrus/Functions/: Actor.cpp  ActorBase.cpp  Ammo.cpp  ArmorAddon.cpp  Array.cpp  Book.cpp  Cell.cpp  Debug.cpp  Detection.cpp  EffectShader.cpp  Enchantment.cpp  Faction.cpp  Furniture.cpp  Game.cpp  Graphics.cpp  Hazard.cpp  Idle.cpp  LeveledItem.cpp  LeveledList.cpp  Light.cpp  Location.cpp  MagicEffect.cpp  ObjectReference.cpp  Package.cpp  Potion.cpp  Projectile.cpp  Quest.cpp  Scene.cpp  Scroll.cpp  Sound.cpp  Spell.cpp  Strings.cpp  UI.cpp  Utility.cpp  VisualEffect.cpp  Weather.cpp
src/Papyrus/Util/: ActorGraphics.cpp  ConditionParser.cpp  Graphics.cpp  Inventory.cpp  Magic.cpp  Script.cpp
src/Serialization/: Base.cpp  EventHolder.cpp  Events.cpp  KeywordRef.cpp  Keywords.cpp  Manager.cpp  Perks.cpp  Reset.cpp  Serialize.cpp
src/Serialization/Form/: Base.cpp  Keywords.cpp  Perks.cpp
src/Util/: ConditionParser.cpp  GraphicsReset.cpp  VMErrors.cpp
(+56 files in other folders)
